# ctp-gateway-cpp

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
config/: ag_greeks.json  gateway_config.json  gateway_cpp_futures.json  gateway_cpp_stocks.json  gateway_stocks_config.json  greeks_config.json  shm_modules_example.json
include/ctp/: ThostFtdcMdApi.h
src/: config.h  ctp_api_adapter.h  ctp_api_raii.h  ctp_gateway.h  dll_entry.cpp  gateway_log.h  ictp_api.h  main.cpp  md_spi.cpp  md_spi.h  shm_writer.h
src/modules/ctp_gateway_cpp/: CMakeLists.txt
src/modules/ctp_gateway_cpp/include/ctp/: ThostFtdcTraderApi.h  ThostFtdcUserApiDataType.h  ThostFtdcUserApiStruct.h
src/modules/ctp_gateway_cpp/src/: config.cpp  config.h  ctp_api_raii.h  ctp_gateway.cpp  ctp_gateway.h  ctp_loader.cpp  ctp_loader.h  dll_entry.cpp  dll_handle.h  main.cpp  md_spi.cpp  md_spi.h  mock_ctp_api.h  quote_tick.h  quote_validator.h  td_spi.cpp  td_spi.h
tests/: CMakeLists.txt  test_gateway_log.cpp  test_option_dispatch.cpp  test_quote_routing.cpp  test_quote_validator.cpp
tests/unit/ctp_gateway/: CMakeLists.txt  test_ctp_loader.cpp  test_dll_handle.cpp  test_option_dispatch.cpp  test_quote_routing.cpp  test_stale_detection.cpp
